# C0-Compiler

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  ast.cpp  ast.h  ast_visitor.cpp  ast_visitor.h  debug.cpp  debug.h  error.cpp  error.h  generator.cpp  generator.h  iobase.h  lexer.cpp  lexer.h  main.cpp  memory_pool.h  mips_isa.cpp  mips_isa.h  oblivion.h  parser.cpp  parser.h  quad_generator.cpp  quad_generator.h  scope.cpp  scope.h  token.cpp  token.h  type.cpp  type.h  visitor.h
test/: testfile.c
